tests/ui/closures/binder/type-bound.stderr
error: late-bound type parameter not allowed on closures
  --> $DIR/type-bound.rs:4:9
   |
LL |     for<T> || -> T {};
   |         ^

error: aborting due to 1 previous error

